--- a/assets/style.css
+++ b/assets/style.css
@@ -1,9 +1,12 @@
-        /* css navbar */
         * {
-            font-family: 'Poppins', sans-serif;
+            font-family: 'Inter', sans-serif;
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+        }
+
+        a {
+            text-decoration: none;
         }
 
         nav {
@@ -12,7 +15,7 @@
             align-items: center;
             min-height: 10vh;
             background-color: #001d3d;
-            font-family: 'Poppins', sans-serif;
+            font-family: 'Inter', sans-serif;
         }
 
         .logo {
@@ -20,8 +23,8 @@
         }
 
         .logo img {
-            width: 50px;
-            height: 50px;
+            width: 40px;
+            height: 40px;
             margin-right: 10px;
             border-radius: 5%;
         }
@@ -54,6 +57,7 @@
 
         .search-bar:hover {
             border-color: #ffc300;
+            transition: all 0.5s ease;
         }
 
         .search-bar input {
@@ -82,6 +86,7 @@
         .search-bar:hover button {
             background-color: #ffc300;
             color: #ffffff;
+            transition: all 0.5s ease;
         }
 
         /* CSS Menu */
@@ -111,4 +116,82 @@
             background-color: #ffc300;
             color: white;
             border-radius: 5px;
+            transition: all 0.5s ease;
+        }
+
+        /* css container-header */
+        .container-header {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            height: 90vh;
+            background-image: url(img/container-head.jpg);
+            background-size: cover;
+        }
+
+        /* css content-left */
+        .content-left {
+            width: 50%;
+            height: 100%;
+            padding-left: 3rem;
+            color: white;
+            background: rgba(0, 0, 0, 0.5);
+        }
+
+        .content-left h1 {
+            font-size: 3rem;
+            font-weight: 600;
+            margin-top: 26vh;
+            margin-bottom: 1rem;
+        }
+
+        .content-left p {
+            font-size: 1.2rem;
+            font-weight: 300;
+            margin-bottom: 2rem;
+        }
+
+        .content-left .btn {
+            padding: 1rem 2rem;
+            border: none;
+            outline: none;
+            background: #001d3d;
+            color: #fff;
+            font-size: 1rem;
+            font-weight: 500;
+            border-radius: 0.5rem;
+            cursor: pointer;
+            transition: all 0.5s ease-in-out;
+        }
+
+        .content-left .btn:hover {
+            background: #ffc300;
+        }
+
+        /* css content-right */
+        .content-right {
+            width: 50%;
+            height: 100%;
+            padding: 5rem;
+            text-align: right;
+            align-items: center;
+            background: rgba(0, 0, 0, 0.5);
+        }
+
+        .content-right h1 {
+            margin-top: 15vh;
+            font-weight: 600;
+            color: #ffc300;
+        }
+
+        .content-right span {
+            font-size: 13px;
+            font-weight: 300;
+            color: #ffc300;
+        }
+
+        .content-right q {
+            font-size: 12px;
+            font-weight: 300;
+            color: #fff;
         }
