--- a/assets/style.css
+++ b/assets/style.css
@@ -3,6 +3,14 @@
             margin: 0;
             padding: 0;
             box-sizing: border-box;
+            /* border: 1px solid red; */
+        }
+
+        .container {
+            width: 100%;
+            padding: 70px 4rem;
+            background-color: #f3f3f3;
+            margin: 0 auto;
         }
 
         a {
@@ -180,7 +188,7 @@
 
         .content-right h1 {
             margin-top: 15vh;
-            font-weight: 600;
+            font-size: 2rem;
             color: #ffc300;
         }
 
@@ -194,4 +202,346 @@
             font-size: 12px;
             font-weight: 300;
             color: #fff;
+        }
+
+        /* CSS untuk section jelajah */
+        .container .judul {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .container .judul h3 {
+            font-size: 20px;
+            font-weight: 600;
+            color: #000000;
+            display: flex;
+            align-items: center;
+            margin-left: 9rem;
+        }
+
+        .container .judul h3 img {
+            width: 30px;
+            height: 30px;
+            margin-right: 5px;
+        }
+
+        .container .judul h4 {
+            margin-right: 9rem;
+            color: #3976dc;
+            cursor: pointer;
+        }
+
+        .container .judul h4:hover {
+            color: #ffc300;
+        }
+
+        @media screen and (max-width: 1036px) {
+            .container {
+                padding: 70px 2rem;
+            }
+
+            .container-header {
+                flex-direction: column;
+                background-position: center center;
+            }
+
+            .content-left {
+                width: 100%;
+                height: 50%;
+                padding: 2rem;
+                text-align: center;
+            }
+
+            .content-left h1 {
+                font-size: 2rem;
+            }
+
+            .content-left p {
+                font-size: 1rem;
+            }
+
+            .content-right {
+                width: 100%;
+                height: 50%;
+                padding: 2rem;
+                text-align: center;
+            }
+
+            .content-right h1 {
+                font-size: 1.5rem;
+            }
+
+            .content-right span {
+                font-size: 10px;
+            }
+
+            .content-right q {
+                font-size: 10px;
+            }
+
+            .container .judul h3 {
+                font-size: 15px;
+                margin-left: 2rem;
+            }
+
+            .container .judul h3 img {
+                width: 20px;
+                height: 20px;
+            }
+
+            .container .judul h4 {
+                margin-right: 2rem;
+            }
+
+            .container .judul h4:hover {
+                color: #ffc300;
+            }
+
+            .container hr {
+                margin: 1rem 2rem;
+            }
+        }
+
+        .container hr {
+            background-color: #ffc300;
+            border: none;
+            height: 3px;
+            margin-top: 5px;
+        }
+
+        .container-card {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            align-items: center;
+            margin: 0 auto;
+            width: 80%;
+        }
+
+        .card {
+            width: 200px;
+            height: 500px;
+            margin: 20px;
+            background-color: #ffffff;
+            border-radius: 10px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+            overflow: hidden;
+        }
+
+        .card .img {
+            width: 100%;
+            height: 300px;
+            overflow: hidden;
+        }
+
+        .card .img img {
+            width: 100%;
+            height: 100%;
+            object-fit: cover;
+            transition: 0.5s;
+        }
+
+        .card:hover .img img {
+            transform: scale(1.1);
+        }
+
+        .card .content {
+            padding: 20px;
+        }
+
+        .card .content .title {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .card .content .title h3 {
+            font-size: 20px;
+            font-weight: 600;
+            color: #000000;
+        }
+
+        .card .content .title span {
+            font-size: 14px;
+            font-weight: bold;
+            color: #ffc300;
+        }
+
+        .card .content .desc {
+            margin: 20px 0;
+            font-size: 14px;
+            font-weight: 400;
+            color: #000000;
+            line-height: 20px;
+            text-align: justify;
+        }
+
+        .card .content .button {
+            display: flex;
+            justify-content: flex-end;
+            align-items: center;
+        }
+
+        .card .content .button button {
+            padding: 10px 33px;
+            border: none;
+            outline: none;
+            border-radius: 5px;
+            background-color: #001d3d;
+            color: #ffffff;
+            font-size: 14px;
+            font-weight: 500;
+            cursor: pointer;
+            transition: 0.5s;
+        }
+
+        .card .content .button button:hover {
+            background-color: #ffc300;
+        }
+
+        /* Aside */
+        #about {
+            background-color: #f5f5f5;
+        }
+
+        .garis-bawah-judul {
+            margin-left: 9rem;
+            width: 31%;
+        }
+
+        .about-us {
+            margin-top: 50px;
+        }
+
+        .about-us .judul {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .about-us .judul h3 {
+            font-size: 24px;
+            font-weight: 600;
+        }
+
+        .about-us .judul img {
+            width: 30px;
+            height: 30px;
+            margin-right: 10px;
+        }
+
+        .about-us hr {
+            margin-top: 10px;
+        }
+
+        .about-us .container-about {
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+        }
+
+        .about-us .container-about .content-aboutus-left {
+            width: 70%;
+            margin-right: 20px;
+            padding-left: 9rem;
+        }
+
+        .about-us .container-about .content-aboutus-left h1 {
+            font-size: 25px;
+        }
+
+        .about-us .container-about .content-aboutus-left p {
+            font-size: 18px;
+            font-weight: 400;
+            margin-top: 20px;
+        }
+
+        .about-us .container-about .content-aboutus-right {
+            width: 30%;
+            display: flex;
+            flex-direction: column;
+            justify-content: flex-end;
+            align-items: center;
+        }
+
+        .about-us .container-about .content-aboutus-right h1 {
+            font-size: 25px;
+        }
+
+        .about-us .container-about .content-aboutus-right img {
+            width: 250px;
+            height: 250px;
+            object-fit: cover;
+            border-radius: 50%;
+            text-align: center;
+            margin: 1rem 0;
+        }
+
+        .about-us .container-about .content-aboutus-right .sosmed {
+            display: flex;
+            justify-content: center;
+            margin-top: 1rem;
+        }
+
+        .about-us .container-about .content-aboutus-right .sosmed i {
+            font-size: 13px;
+            margin: 5px 10px;
+            color: black;
+        }
+
+        .about-us .container-about .content-aboutus-right .data-diri {
+            text-align: center;
+        }
+
+        .about-us .container-about .content-aboutus-right .data-diri h5 {
+            font-size: 18px;
+            margin-top: 1rem;
+        }
+
+        .about-us .container-about .content-aboutus-right .data-diri p {
+            font-size: 17px;
+            margin-top: 1rem;
+        }
+
+        @media screen and (max-width: 1036px) {
+            .about-us .container-about {
+                flex-direction: column;
+                justify-content: center;
+                align-items: center;
+            }
+
+            .about-us .container-about .content-aboutus-left {
+                width: 100%;
+                padding-left: 0;
+                margin-bottom: 20px;
+                text-align: center;
+            }
+
+            .about-us .container-about .content-aboutus-right {
+                width: 100%;
+                margin-bottom: 20px;
+            }
+        }
+
+
+        /* footer css */
+        footer {
+            width: 100%;
+            background-color: #001d3d;
+            color: #ffffff;
+        }
+
+        .footer-bottom {
+            width: 100%;
+            background-color: #0d1b2a;
+            color: #ffffff;
+            padding: 1rem 0;
+            text-align: center;
+            position: bottom;
+        }
+
+        .footer-bottom p {
+            font-size: 1rem;
+            font-weight: 300;
         }
